<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colortransparent"
    tools:context=".fragment.login">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="40dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyEditTextTheme"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                android:hint="Username">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyEditTextTheme"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                android:hint="Password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme" />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:background="@drawable/ripple_effect">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_edit"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textSize="16dp"
                        android:text="LOGIN"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </RelativeLayout>


            <ProgressBar
                android:id="@+id/progress_bar_login"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:minWidth="40dp" />
        </LinearLayout>
    </ScrollView>



</FrameLayout>