<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/landing_page"
        tools:context=".activity.LandingPage">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottomNavigation"
            android:id="@+id/fragmentContainer"/>


        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:mbn_countBackgroundColor="#ff6f00"
            app:mbn_countTextColor="#000"
            app:mbn_defaultIconColor="#909090"
            app:mbn_rippleColor="@color/colorPrimary"
            app:mbn_selectedIconColor="@color/yellowInception"
            app:mbn_shadowColor="#5000" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/landing_page_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>

