...
                android:src="@drawable/ic_gallery_svgrepo_com" />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/yellowInception"
            android:text="Log Out"
            app:layout_constraintBottom_toBottomOf="parent"
...
