<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colortransparent"
    tools:context=".fragment.register">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="40dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyEditTextTheme"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                android:hint="Username">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyEditTextTheme"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                android:hint="Email">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyEditTextTheme"
                app:startIconDrawable="@drawable/ic_whatsapp"
                android:hint="Whatsapp Number">
                <EditText
                    android:id="@+id/whatsapp"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyEditTextTheme"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                android:hint="Password">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/MyEditTextTheme"
                app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
                android:hint="Confirm Password">
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditTextTheme" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_tickets"
                    android:drawablePadding="10dp"
                    android:text="Role"/>

                <Spinner
                    android:id="@+id/role_spinner"
                    android:layout_marginLeft="110dp"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



            <RelativeLayout
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:background="@drawable/ripple_effect">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_edit"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textSize="16dp"
                        android:text="REGISTER"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:minWidth="40dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>